get errors from xbuild